# jam-lht

./: .env.example  .gitignore  .latest_exp  .pre-commit-config.yaml  .yamlint  CHANGELOG.md  README.md  pyproject.toml  run.py  setup.cfg  test.py  train.py
configs/: config.yaml  train.yaml
configs/experiment/: example.yaml  example_full.yaml
configs/logger/: wandb.yaml
configs/trainer/: default.yaml
doc/: guide.md
logs/: latest
src/: train.py  training_pipeline.py
src/logger/: wandb_logger.py
src/models/: mnist_model.py  mnist_module.py
src/utils/: lht_utils.py  utils.py
tests/shell/: test_basic_commands.py
