[tool.poetry]
name = "lightning-hydra-template"
version = "1.0.1"
description = "decent template for starting a deep learning projects"
authors = ["qsh.27"]

[tool.poetry.dependencies]
python = "3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
pytorch-lightning = "^1.3.8"
torchmetrics = "^0.4.1"
hydra-core = "1.1.0"
hydra-colorlog = "1.1.0"
hydra-optuna-sweeper = "1.1.0"
wandb = "^0.10.30"
rich = "^10.6.0"
kornia = "^0.5.6"
scikit-learn = "^0.24.2"
scikit-image = "^0.18.0"
einops = "0.3.0"
hydra-joblib-launcher = "1.1.5"


[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
ipdb = "^0.13.0"
jupyterlab = "^3.0.1"
pytest = "^6.2.1"
pylint = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

